# codd

./: LICENSE  README.md
core/: Cargo.toml
core/examples/: family_tree.rs  music.rs
core/src/: database.rs  expression.rs  lib.rs  macros.rs  tools.rs
core/src/database/: elements.rs  evaluate.rs  expression_ext.rs  helpers.rs  instance.rs  validate.rs  validate_view.rs
core/src/expression/: builder.rs  dependency.rs  diff.rs  difference.rs  empty.rs  full.rs  intersect.rs  join.rs  mono.rs  product.rs  project.rs  relation.rs  select.rs  singleton.rs  union.rs  view.rs
src/: database.rs  expression.rs  lib.rs  tools.rs
