[package]
name = "codd"
version = "0.1.0"
authors = ["Salman Saghafi <salman.saghafi@me.com>"]
edition = "2018"
license = "MIT"
description = "codd is a minimal in-memory database with relational algebraic expressions as queries."
homepage = "https://github.com/salmans/codd"
repository = "https://github.com/salmans/codd"
keywords = ["codd", "relational-algebra", "database"]
categories = ["mathematics", "database-implementations"]
readme = "https://github.com/salmans/codd/blob/master/README.md"

[dependencies]
thiserror = "^1.0"
either = "^1.6"

[features]
unstable = []